--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
    <section id="projects">
      <article class="home-container">
-       <h1 class="text-center">My Prtfolio</h1>
+       <h1 class="text-center">My Portfolio</h1>
      </article>
    </section>
 
